add basic index text

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 <h1><center>Roofseeds</center></h1>
 <hr>
-
+This app will provide an easy way to green your own public piece of land without getting through the trouble by contacting the local authorities.
+<hr>
 <p>
   Visit us on <a href="https://github.com/Chaostheorie/roofseed">Github</a>
 </p>
