fix basic typos ad try to implement markers

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,3 +1,5 @@
+{% extends "base.html" -%}
+{% block content -%}
 <h1><center>Roofseeds</center></h1>
 <hr>
 This app will provide an easy way to green your own public piece of land without getting through the trouble by contacting the local authorities.
@@ -5,3 +7,4 @@ This app will provide an easy way to green your own public piece of land without
 <p>
   Visit us on <a href="https://github.com/Chaostheorie/roofseed">Github</a>
 </p>
+{% endblock -%}
