--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 {% import "macros.jinja" as macros -%}
 
 <!DOCTYPE html>
-<html class="no-js" lang="{{ DEFAULT_LANG }}">
+<html lang="{{ DEFAULT_LANG }}">
 
 <head>
     {% block head %}
@@ -11,38 +11,30 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="/theme/css/bootstrap4-neon-glow.min.css" type="text/css" />
-    <link rel="stylesheet" href="/theme/css/custom-style.css" type="text/css">
-
-    <!-- Fonts -->
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/font-hack/2.020/css/hack.min.css'>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" />
 
     <!-- JS -->
-    <script src="/theme/js/jquery-3.4.1.min.js" type="text/javascript"></script>
-    <script src="/theme/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+    <script src="/static/js/jquery-3.4.1.min.js" type="text/javascript"></script>
+    <script src="/static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="/theme/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/theme/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/static/images/favicon.ico" type="image/x-icon">
 
-
-
+    {% block advanced_head -%}{% endblock -%}
     {% endblock head %}
 </head>
 {% block navbar -%}
 <body id="index" class="blog">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-2">
+  <nav class="navbar navbar-expand-lg mb-2">
     {% block navbrand -%}
-      <a class="navbar-brand" href="/"><img src="/theme/images/brand.png" width="30px" height="30px" class="img-fluid" /> {{ SITENAME }}</a>
+      <a class="navbar-brand text-muted text-bold" href="/">{{ config["SITENAME"] }}</h1></a>
     {% endblock -%}
     <button class="navbar-toggler text-white" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
+      <ul class="navbar-nav">
         {% block nav_items -%}
           {% for title, link in config["MENUITEMS"] %}
               <li class="nav-item"><a href="{{ link }}" class="nav-link {% if p == page %}active{% endif -%}">{{ title }}</a></li>
@@ -54,7 +46,9 @@
   {% endblock navbar -%}
     <section id="wrapper" class="clearfix">
         <section id="content" class="container m-2" >
+          {% if not content_title_visible is defined or content_title_visible == False -%}
           <h1>{% block content_title %}{% endblock %}</h1>
+          {% endif -%}
           <hr>
             {% block content %}
             {% endblock %}
@@ -66,6 +60,7 @@
             Powered by <a href="https://www.palletsprojects.com/p/flask/">Flask</a> and created by <a href="https://sinclair.gq">Cobalt</a>
         </footer>
     {% endblock footer %}
+    {% block javascript -%}{% endblock -%}
 </div>
 </body>
 </html>
