fix backend and make more pages

--- a/app/templates/find.html
+++ b/app/templates/find.html
@@ -6,6 +6,7 @@ Find a nearby tree
 <form class="form " style="color: white;" action="/map" method="GET">
   <div class="row">
     <input class="col form-control" name="plz" placeholder="PLZ"></input>
+    <input type="hidden" name="pages" value="10">
     <button class="col btn btn-primary btn-shadow">Find nearby trees</button>
   </div>
 </form>
