--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,7 +37,7 @@
       <ul class="navbar-nav">
         {% block nav_items -%}
           {% for title, link in config["MENUITEMS"] %}
-              <li class="nav-item"><a href="{{ link }}" class="nav-link {% if p == page %}active{% endif -%}">{{ title }}</a></li>
+              <li class="nav-item"><a href="{{ link }}" class="nav-link">{{ title }}</a></li>
           {% endfor %}
         {% endblock nav_items -%}
       </ul>
